<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="360dp"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="360dp"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtMedicineName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="Medicine Name"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/tab_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/quality"
                        android:textColor="@color/grey_800"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/txtCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        android:background="@drawable/bg_rounded_border_grey"
                        android:gravity="center"
                        android:paddingLeft="30dp"
                        android:paddingTop="11dp"
                        android:paddingRight="30dp"
                        android:paddingBottom="11dp"
                        android:text="1    tab"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/use_medicine"
                        android:textColor="@color/grey_800"
                        android:textSize="12sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="2"
                        android:background="@drawable/bg_rounded_border_grey"
                        android:orientation="horizontal"
                        android:padding="3dp">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/ed_day"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/rounded_corner_white"
                            android:gravity="center_horizontal"
                            android:hint="1"
                            android:inputType="number"
                            android:maxLength="3"
                            android:maxLines="1"
                            android:padding="10dp"
                            android:singleLine="true"
                            android:text="1"
                            android:textSize="12sp" />

                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:layout_margin="3dp"
                            android:background="@color/grey_600" />

                        <Spinner
                            android:id="@+id/day_spinner"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:entries="@array/medicine_date"
                            android:padding="5dp"
                            android:spinnerMode="dropdown" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/count"
                android:textColor="@color/grey_800"
                android:textSize="12sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtMorning"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:background="@drawable/bg_rounded_border_grey"
                    android:gravity="center"
                    android:text="@string/morning"
                    android:textColor="@color/grey_700"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/txtAfternoon"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:background="@drawable/bg_rounded_border_grey"
                    android:gravity="center"
                    android:text="@string/afternoon"
                    android:textColor="@color/grey_700"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/txtNight"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:background="@drawable/bg_rounded_border_grey"
                    android:gravity="center"
                    android:text="@string/night"
                    android:textColor="@color/grey_700"
                    android:textSize="12sp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/medicine_label"
                android:textColor="@color/grey_800"
                android:textSize="12sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtBeforeMeal"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_alignParentLeft="true"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:background="@drawable/bg_rounded_border_grey"
                    android:gravity="center"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/before_eating"
                    android:textColor="@color/grey_700"
                    android:textSize="11sp" />

                <TextView
                    android:id="@+id/txtAfterMeal"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:background="@drawable/bg_rounded_border_grey"
                    android:gravity="center"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/after_eating"
                    android:textColor="@color/grey_700"
                    android:textSize="11sp" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/comment"
                android:textColor="@color/grey_800"
                android:textSize="12sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="10dp"
                app:cardElevation="3dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/txtRemark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/rounded_corner_white"
                    android:gravity="left"
                    android:hint="@string/compose"
                    android:inputType="textMultiLine"
                    android:lines="5"
                    android:maxLength="2000"
                    android:padding="10dp"
                    android:scrollbars="vertical"
                    android:textColor="@color/black"
                    android:textSize="13sp" />
            </androidx.cardview.widget.CardView>

            <org.mmtextview.components.MMTextView
                android:id="@+id/btnConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_3x"
                android:layout_marginBottom="15dp"
                android:background="@drawable/btn_rounded_corner_blue"
                android:gravity="center"
                android:paddingHorizontal="20dp"
                android:paddingVertical="15dp"
                android:text="@string/add"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>